--- a/index.html
+++ b/index.html
@@ -4,21 +4,179 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snippet Keeper</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
     <style>
-      .snippet-card {
-        margin-bottom: 1rem;
-      }
-      pre {
-        background: #f8f9fa;
-        padding: 1rem;
-        border-radius: 5px;
+      :root {
+        --primary: #2563eb; /* Azul principal */
+        --success: #16a34a; /* Verde éxito */
+        --warning: #f59e0b; /* Amarillo advertencia */
+        --danger: #dc2626; /* Rojo error */
+        --background: #f9fafb; /* Fondo claro */
+        --card-bg: #ffffff; /* Fondo tarjeta */
+        --text: #1f2937; /* Texto principal */
+        --text-muted: #6b7280; /* Texto secundario */
       }
 
-      /* Estilos para notificaciones */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+      }
+
+      body {
+        background: var(--background);
+        color: var(--text);
+        padding: 20px;
+      }
+
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+
+      h1 {
+        text-align: center;
+        margin-bottom: 30px;
+        font-size: 2rem;
+      }
+
+      /* Formulario */
+      .form-card {
+        background: var(--card-bg);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 30px;
+      }
+
+      .form-card h2 {
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+      }
+
+      .form-group {
+        margin-bottom: 15px;
+      }
+
+      .form-group label {
+        display: block;
+        font-weight: 500;
+        margin-bottom: 5px;
+      }
+
+      .form-input,
+      .form-textarea,
+      .form-select {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #d1d5db;
+        border-radius: 5px;
+        font-size: 1rem;
+        background: #fff;
+      }
+
+      .form-textarea {
+        resize: vertical;
+        min-height: 100px;
+      }
+
+      .form-select {
+        appearance: none;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%231f2937' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: right 10px center;
+        background-size: 16px;
+      }
+
+      .form-buttons {
+        display: flex;
+        gap: 10px;
+      }
+
+      .btn {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+
+      .btn-primary {
+        background: var(--primary);
+        color: #fff;
+      }
+
+      .btn-primary:hover {
+        background: #1d4ed8;
+      }
+
+      .btn-secondary {
+        background: #6b7280;
+        color: #fff;
+      }
+
+      .btn-secondary:hover {
+        background: #4b5563;
+      }
+
+      /* Tarjetas de snippets */
+      .snippet-card {
+        background: var(--card-bg);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+      }
+
+      .snippet-card h3 {
+        font-size: 1.25rem;
+        margin-bottom: 10px;
+      }
+
+      .snippet-card p {
+        margin-bottom: 10px;
+      }
+
+      .snippet-card pre {
+        background: #f3f4f6;
+        padding: 15px;
+        border-radius: 5px;
+        overflow-x: auto;
+        font-size: 0.9rem;
+      }
+
+      .snippet-card .text-muted {
+        color: var(--text-muted);
+        font-size: 0.85rem;
+      }
+
+      .snippet-card .btn-group {
+        display: flex;
+        gap: 10px;
+        margin-top: 10px;
+      }
+
+      .btn-warning {
+        background: var(--warning);
+        color: #fff;
+      }
+
+      .btn-warning:hover {
+        background: #d97706;
+      }
+
+      .btn-danger {
+        background: var(--danger);
+        color: #fff;
+      }
+
+      .btn-danger:hover {
+        background: #b91c1c;
+      }
+
+      /* Notificaciones */
       .notification-container {
         position: fixed;
         top: 20px;
@@ -26,6 +184,7 @@
         z-index: 1000;
         width: 300px;
       }
+
       .notification {
         padding: 15px;
         margin-bottom: 10px;
@@ -35,50 +194,113 @@
         transition: opacity 0.3s ease-in-out;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       }
+
       .notification.show {
         opacity: 1;
       }
+
       .notification.info {
-        background-color: #0d6efd;
-      } /* Azul para informativa */
+        background: var(--primary);
+      }
       .notification.success {
-        background-color: #198754;
-      } /* Verde para éxito */
+        background: var(--success);
+      }
       .notification.warning {
-        background-color: #ffc107;
-      } /* Amarillo para advertencia */
+        background: var(--warning);
+      }
       .notification.error {
-        background-color: #dc3545;
-      } /* Rojo para error */
+        background: var(--danger);
+      }
+
+      /* Modal */
+      .modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .modal.show {
+        display: flex;
+      }
+
+      .modal-content {
+        background: var(--card-bg);
+        padding: 20px;
+        border-radius: 8px;
+        max-width: 400px;
+        width: 90%;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      }
+
+      .modal-content h2 {
+        font-size: 1.5rem;
+        margin-bottom: 15px;
+      }
+
+      .modal-content p {
+        margin-bottom: 20px;
+      }
+
+      .modal-buttons {
+        display: flex;
+        gap: 10px;
+        justify-content: flex-end;
+      }
+
+      /* Responsividad */
+      @media (max-width: 600px) {
+        .container {
+          padding: 0 10px;
+        }
+
+        .form-buttons,
+        .btn-group,
+        .modal-buttons {
+          flex-direction: column;
+          gap: 10px;
+        }
+
+        .btn {
+          width: 100%;
+          text-align: center;
+        }
+
+        .notification-container {
+          width: 90%;
+          right: 5%;
+        }
+      }
     </style>
   </head>
-  <body class="container my-4">
-    <h1 class="mb-4">Snippet Keeper</h1>
+  <body>
+    <div class="container">
+      <h1>Snippet Keeper</h1>
 
-    <!-- Contenedor para notificaciones -->
-    <div class="notification-container" id="notificationContainer"></div>
+      <!-- Contenedor para notificaciones -->
+      <div class="notification-container" id="notificationContainer"></div>
 
-    <!-- Formulario para crear/actualizar snippets -->
-    <div class="card mb-4">
-      <div class="card-body">
-        <h5 class="card-title" id="formTitle">Agregar Snippet</h5>
+      <!-- Formulario para crear/actualizar snippets -->
+      <div class="form-card">
+        <h2 id="formTitle">Agregar Snippet</h2>
         <form id="snippetForm">
           <input type="hidden" id="snippetId" />
-          <div class="mb-3">
-            <label for="titulo" class="form-label">Título</label>
-            <input type="text" class="form-control" id="titulo" required />
+          <div class="form-group">
+            <label for="titulo">Título</label>
+            <input type="text" class="form-input" id="titulo" required />
           </div>
-          <div class="mb-3">
-            <label for="codigo" class="form-label">Código</label>
-            <textarea
-              class="form-control"
-              id="codigo"
-              rows="5"
-              required
-            ></textarea>
+          <div class="form-group">
+            <label for="codigo">Código</label>
+            <textarea class="form-textarea" id="codigo" required></textarea>
           </div>
-          <div class="mb-3">
-            <label for="lenguaje" class="form-label">Lenguaje</label>
+          <div class="form-group">
+            <label for="lenguaje">Lenguaje</label>
             <select class="form-select" id="lenguaje" required>
               <option value="php">PHP</option>
               <option value="javascript">JavaScript</option>
@@ -87,23 +309,41 @@
               <option value="css">CSS</option>
             </select>
           </div>
-          <button type="submit" class="btn btn-primary" id="submitBtn">
-            Guardar
-          </button>
-          <button
-            type="button"
-            class="btn btn-secondary"
-            id="cancelBtn"
-            style="display: none"
-          >
-            Cancelar
-          </button>
+          <div class="form-buttons">
+            <button type="submit" class="btn btn-primary" id="submitBtn">
+              Guardar
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              id="cancelBtn"
+              style="display: none"
+            >
+              Cancelar
+            </button>
+          </div>
         </form>
       </div>
-    </div>
 
-    <!-- Lista de snippets -->
-    <div id="snippetList"></div>
+      <!-- Lista de snippets -->
+      <div id="snippetList"></div>
+
+      <!-- Modal de confirmación -->
+      <div class="modal" id="deleteModal">
+        <div class="modal-content">
+          <h2>Confirmar Eliminación</h2>
+          <p>¿Estás seguro de que quieres eliminar este snippet?</p>
+          <div class="modal-buttons">
+            <button class="btn btn-secondary" id="cancelDeleteBtn">
+              Cancelar
+            </button>
+            <button class="btn btn-danger" id="confirmDeleteBtn">
+              Confirmar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script>
       const apiUrl = "api.php";
@@ -115,6 +355,10 @@
       const notificationContainer = document.getElementById(
         "notificationContainer"
       );
+      const deleteModal = document.getElementById("deleteModal");
+      const confirmDeleteBtn = document.getElementById("confirmDeleteBtn");
+      const cancelDeleteBtn = document.getElementById("cancelDeleteBtn");
+      let deleteSnippetId = null;
 
       // Función para mostrar notificaciones
       function showNotification(message, type = "info") {
@@ -123,12 +367,10 @@
         notification.textContent = message;
         notificationContainer.appendChild(notification);
 
-        // Mostrar la notificación
         setTimeout(() => {
           notification.classList.add("show");
         }, 100);
 
-        // Ocultar y eliminar después de 3 segundos
         setTimeout(() => {
           notification.classList.remove("show");
           setTimeout(() => {
@@ -183,21 +425,19 @@
         snippetList.innerHTML = "";
         snippets.forEach((snippet) => {
           const card = document.createElement("div");
-          card.className = "card snippet-card";
+          card.className = "snippet-card";
           card.innerHTML = `
-                    <div class="card-body">
-                        <h5 class="card-title">${snippet.titulo}</h5>
-                        <p class="card-text"><strong>Lenguaje:</strong> ${
-                          snippet.lenguaje
-                        }</p>
-                        <pre>${snippet.codigo}</pre>
-                        <p class="card-text"><small class="text-muted">Creado: ${new Date(
-                          snippet.creado_en
-                        ).toLocaleString()}</small></p>
-                        <button class="btn btn-warning btn-sm" onclick="editSnippet(${
+                    <h3>${snippet.titulo}</h3>
+                    <p><strong>Lenguaje:</strong> ${snippet.lenguaje}</p>
+                    <pre>${snippet.codigo}</pre>
+                    <p class="text-muted">Creado: ${new Date(
+                      snippet.creado_en
+                    ).toLocaleString()}</p>
+                    <div class="btn-group">
+                        <button class="btn btn-warning" onclick="editSnippet(${
                           snippet.id
                         })">Editar</button>
-                        <button class="btn btn-danger btn-sm" onclick="deleteSnippet(${
+                        <button class="btn btn-danger" onclick="showDeleteModal(${
                           snippet.id
                         })">Eliminar</button>
                     </div>
@@ -223,23 +463,38 @@
         cancelBtn.style.display = "inline-block";
       }
 
-      // Eliminar snippet
-      async function deleteSnippet(id) {
-        if (!confirm("¿Estás seguro de eliminar este snippet?")) return;
-        const response = await fetch(`${apiUrl}?id=${id}`, {
-          method: "DELETE",
-        });
-        const result = await response.json();
-        if (response.ok) {
-          showNotification(result.mensaje, "success");
-          fetchSnippets();
-        } else {
-          showNotification(
-            result.error || "Error al eliminar el snippet",
-            "error"
-          );
-        }
+      // Mostrar modal de eliminación
+      function showDeleteModal(id) {
+        deleteSnippetId = id;
+        deleteModal.classList.add("show");
       }
+
+      // Confirmar eliminación
+      confirmDeleteBtn.addEventListener("click", async () => {
+        if (deleteSnippetId) {
+          const response = await fetch(`${apiUrl}?id=${deleteSnippetId}`, {
+            method: "DELETE",
+          });
+          const result = await response.json();
+          if (response.ok) {
+            showNotification(result.mensaje, "success");
+            fetchSnippets();
+          } else {
+            showNotification(
+              result.error || "Error al eliminar el snippet",
+              "error"
+            );
+          }
+        }
+        deleteModal.classList.remove("show");
+        deleteSnippetId = null;
+      });
+
+      // Cancelar eliminación
+      cancelDeleteBtn.addEventListener("click", () => {
+        deleteModal.classList.remove("show");
+        deleteSnippetId = null;
+      });
 
       // Reiniciar formulario
       function resetForm() {
